# stdev

./: .env.example  .gitignore  .gitmessage.txt  AGENTS.md  README.md  deploy.env.example  deploy.sh  package.json  pnpm-lock.yaml  ralph.sh
.codex-loop/: PROMPT.md  QUALITY_BARS.md  README.md  STEERING.md  config.json  tasks.json
.codex-loop/assets/: README.md  registry.json
.codex-loop/context/: README.md  durable.json  open-questions.json
.codex-loop/design/: DESIGN.md
.codex-loop/modes/: implementation.md  prd.md  product-ui.md  proposal.md
.codex-loop/prd/: PRD.md  SUMMARY.md
.codex-loop/preflight/: README.md
.codex-loop/tasks/: TASK-001.json  TASK-002.json  TASK-003.json  TASK-004.json  TASK-005.json
apps/api/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/api/app/: __init__.py  config.py  fallbacks.py  main.py  media.py  models.py  openai_service.py  pipeline.py  store.py
apps/api/tests/: test_fallbacks.py  test_media.py  test_openai_service.py  test_pipeline.py  test_store.py
apps/web/: .env.production  README.md  e2e-smoke.spec.js  index.html  package.json  vite.config.ts
deploy/ec2/: compose.yml  deploy-remote.sh  nginx.conf
docs/: current-implementation-and-orchestrator-plan.md  git-commit-convention.md
docs/architecture/: README.md
docs/submissions/: README.md  proposal.md
infra/: README.md
scripts/: asset_registry.py  aws_inventory.sh  codex_ralph.py  context_engine.py  import_hwpx_preview.py  preflight.py  ralph_session.py  render_markdown_submission.py  review_submission_pdf.py  review_submission_source.py
(+28 files in other folders)
